# polyblade

./: .gitignore  Cargo.toml  README.md  conway.json  deny.toml  example.js  index.html  polydex.csv  polydex.ron
.github/: FUNDING.yml
.github/workflows/: ci.yml  dispatch_update.yml  rust.yml
benches/: distance.rs
polyblade-derive/: Cargo.toml
polyblade-derive/src/: lib.rs
polyblade-derive/tests/: 01-simple.rs
src/: __main.rs  app_state.rs  color.rs  gl_utils.rs  graph.rs  lib.rs  main.rs  main_old.rs  menu.rs  message.rs  pipeline.rs  polydex.rs  polyhedra.rs  render.rs  scene.rs  window.rs
src/bones/: conway.rs  edge.rs  face.rs  matrix.rs  mod.rs  platonic.rs  polygraph.rs  polyhedron.rs  transaction.rs
src/bones/graphs/: conway.rs  meta.rs  mod.rs  simple.rs
src/bones/graphs/meta/: mod.rs
src/bones/graphs/render/: mod.rs  transaction.rs
src/bones/graphs/simple/: edge.rs  mod.rs
src/bones/jaggraph/: conway.rs  mod.rs  platonic.rs  test.rs
src/bones/matrix/: mod.rs  test.rs
src/bones/polyhedron/: _polyhedron.rs  conway.rs  cycles.rs  mod.rs  polyhedron.rs  render.rs  shape.rs  test.rs  vertex.rs
src/bones/polyhedron/distance/: conway.rs  mod.rs  platonic.rs  svg.rs  test.rs
src/bones/polyhedron/polyhedron/: conway.rs  mod.rs
src/bones/polyhedron/polyhedron/shape/: conway.rs  mod.rs
src/bones/polyhedron/polyhedron/shape/distance/: mod.rs
src/bones/polyhedron/shape/: conway.rs  mod.rs  test.rs  tests.rs
src/bones/polyhedron/shape/cycles/: cycle.rs  mod.rs
src/bones/polyhedron/shape/distance/: conway.rs  mod.rs  platonic.rs  svg.rs
src/glutil/: mod.rs  shader.rs  vao.rs  vbo.rs  verify.rs  vertex.rs
src/pipeline/: mod.rs  polygon.rs  vertex.rs
src/platonic_solids/: cube.json  dodecahedron.json  icosahedron.json  octahedron.json  tetrahedron.json
src/polyhedra/: assembler.rs  conway.rs  edge.rs  face.rs  mod.rs  platonic.rs  point.rs  polygraph.rs  polyhedron.rs  transaction.rs  vertex.rs
src/polyhedra/conway/: graph.rs  mod.rs
src/polyhedra/graph/: conway.rs  edge.rs  face.rs  graph.rs  mod.rs  vertex.rs
src/polyhedra/polygraph/: edge.rs  mod.rs
src/polyhedron/: conway.rs  mod.rs  platonic.rs  render.rs  test.rs  transaction.rs
src/polyhedron/shape/: conway.rs  mod.rs  platonic.rs  test.rs
src/polyhedron/shape/cycles/: cycle.rs  mod.rs
src/polyhedron/shape/distance/: conway.rs  mod.rs  svg.rs  test.rs
src/render/: app.rs  camera.rs  color.rs  controls.rs  menu.rs  message.rs  mod.rs  palette.rs  polyblade.rs  polydex.rs  runner.rs  state.rs
src/render/pipeline/: buffer.rs  depth.rs  mod.rs  polygon.rs  polyhedron_primitive.rs  texture.rs  uniforms.rs  vertex.rs
src/render/pipeline/buffer/: mod.rs  types.rs
src/render/shaders/: shader.wgsl
src/scene/: camera.rs  mod.rs  polygon.rs  primitive.rs  transforms.rs
src/scene/pipeline/: buffer.rs  cube.rs  mod.rs  polyhedron.rs  uniforms.rs  vertex.rs
src/shaders/: basic.frag  basic.frag.glsl  basic.vert  basic.vert.glsl  cubes.wgsl  depth.wgsl  schlegel.frag  schlegel.vert  shader.wgsl
