[package]
name = "polyblade"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.0", features = [
	"derive",
	"zeroable_maybe_uninit",
	"zeroable_atomics",
] }
iced_aw = { version = "0.9.2", default-features = false, features = [
	"color_picker",
	"card",
	"modal",
	"menu",
	"quad",
	"icons",
] }
image = { version = "0.24.9" }
# Enum iteration
strum = "0.26.2"
strum_macros = "0.26.2"
# Vector and Matrix math
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
rand = { version = "0.8.5" }
serde = { version = "^1.0.0", features = ["derive"] }
ron = { version = "0.8" }
open = "5.3.0"

[dev-dependencies]
test-case = { version = "^3.3.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.12.0", features = ["debug", "advanced", "svg"] }
tracing-subscriber = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
iced = { version = "0.12.0", features = [
	"debug",
	"advanced",
	"svg",
	"webgl",
	"debug",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[profile.release]
debug = true
