[package]
name = "polyblade"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
bytemuck = { version = "1.0", features = [
	"derive",
	"zeroable_maybe_uninit",
	"zeroable_atomics",
] }

iced_aw = { version = "0.11.0", default-features = false, features = [
	"color_picker",
	"menu",
] }

# Enum iteration
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }

# Vector and Matrix math
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
rand = { version = "0.8.5" }
serde = { version = "^1.0.0", features = ["derive"] }
ron = { version = "0.8" }
#ckmeans = { version = "1.0.6" }
webbrowser = { version = "1.0.2" }
iced_winit = { version = "0.13.0" }
iced_widget = { version = "0.13.0", features = ["wgpu"] }
iced_wgpu = { version = "0.13.0", features = ["webgl"] }

[dev-dependencies]
test-case = { version = "^3.3.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.13.0", features = ["debug", "advanced", "svg"] }
tracing-subscriber = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
iced = { version = "0.13.0", features = [
	"debug",
	"advanced",
	"svg",
	"webgl",
	"debug",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[profile.release]
debug = true
