[package]
name = "polyblade"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
bytemuck = { version = "1.0", features = [
	"derive",
	"zeroable_maybe_uninit",
	"zeroable_atomics",
] }

iced_aw = { version = "0.11.0", default-features = false, features = ["menu"] }

# Enum iteration
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }

# Vector and Matrix math
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
rand = { version = "0.8.5" }
serde = { version = "^1.0.0", features = ["derive"] }
ron = { version = "0.8" }
#ckmeans = { version = "1.0.6" }
webbrowser = { version = "1.0.2" }
iced_winit = { version = "0.13" }
iced_widget = { version = "0.13", features = ["wgpu"] }
iced_wgpu = { version = "0.13", features = ["webgl"] }
log = { version = "0.4.22" }
rustc-hash = { version = "2.0.0" }
graphviz-rust = { version = "0.9.3" }

[dev-dependencies]
test-case = { version = "^3.3.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.13", features = ["debug", "advanced", "svg"] }
tracing-subscriber = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wasm-bindgen = { version = "0.2" }
iced = { version = "0.13", features = [
	"debug",
	"advanced",
	"svg",
	"webgl",
	"debug",
] }
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1.0" }

[profile.release]
debug = true

[features]
default = []
#graphs = ["dep:layout-rs"]
