[package]
name = "polyblade-derive"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = { version = "1.0" }
